--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -133,7 +133,6 @@
 
 			&_back {
 				transform: rotateY(-180deg);
-				overflow: visible;
 				height: 40rem;
 
 				@include respond(phone) {
